--- a/index.html
+++ b/index.html
@@ -9,16 +9,39 @@
         h1{
             color: black;
         }
-        p1{
-            color: aqua;
-        }
-    </style>
-</head>
-<body>
-    <h1>¡hola mundo!</h1>
-    <p>Esta es mi primer pagina web</p>
-    <u1>
-    <li>Huevos</li>
-    <li>Leche</li>
-    </u1>
-    <img src="https://hips.hearstapps.com/es.h-cdn.co/crfes/images/ninos/ocio/peliculas-para-ver-en-familia/brave-indomable/3633391-1-esl-ES/Brave-Indomable.jpg">
+        p1{!DOCTYPE html>
+<html>
+<heand>
+     <title>proyecto final</title>  
+</heand>
+<body style="font-family:Arial, sans-serif; background-color: aqua #f5f5f5; color: #333; margin: 0; padding: 0;">
+    <header style="background-color: #241b1b;padding: 20px; text-align: center;">
+        <h1 style=" color: aliceblue; margin: 0;">mi opinion sobre la pelicula  Valiente </h1>
+    </header>
+    <main style="max-width: 800px; margin: 30px auto; background-color: aliceblue; padding: 20px border-radius: 10px; box-shadow: 0 4px 8pv :blank;">
+       <section>
+        <h2>merida la impetuosa y valiente hija de un rey ecoces fergus y de la reina elinor es una habil arquera que desea surcar su propio camino en la vida su desafio a una vieja tyradicion molesta a los seòores y provocar un caos en el reino merida busca  ayuda con una bruja excentrica que le concede un deseo malogrado hora merida debe descubrir el significado del coraje y deshacer una maldicion bestial antes de que se tarde</h2>
+           <p></p>
+       </section>
+
+       <section>
+           <h2>mi opinion  </h2>
+            <p> </p>
+            <p>valiente demuestra otro tipo de magia comparada con las demas peliculas de disney tiene accion problema y esgraciosa a la vez maeida no se siente con una personalidad forzada lo que hace que no sintamos que es una pelicula feminista sino que muestra otro enfoque que queremos hacer con nuestras vidas  </p>
+       </section>
+
+        <section>
+            <h2>calificasion personal</h2>
+            <p>★★★★☆ 4/5</p>
+        </section>
+
+        <section>
+            <img src="https://static.wikia.nocookie.net/disney/images/5/5b/Brave.png/revision/latest?cb=20140618141421&path-prefix=es">
+        </section>
+    </main>
+    <footer style=" text-align: center; padding: 20px; background-color: aliceblue; color: blacks;">
+        <p>creado por Jose Esparza - 2025</p>
+    </footer>
+</body>
+</html>
+            
