--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
-<!DOCTYPE htm1>
-<htm1>
-<head>
-    <title>jose esparza</title>
-    <style>
-        body{
-            background-color: aqua;
-        }
-        h1{
-            color: black;
-        }
-        p1{!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <heand>
      <title>proyecto final</title>  
@@ -44,4 +33,3 @@
     </footer>
 </body>
 </html>
-            
