--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
 
         <section>
-            <img src="https://static.wikia.nocookie.net/disney/images/5/5b/Brave.png/revision/latest?cb=20140618141421&path-prefix=es">
+            <img src="https://m.media-amazon.com/images/I/61zXBYuytlL._UF894,1000_QL80_.jpg">
         </section>
     </main>
     <footer style=" text-align: center; padding: 20px; background-color: aliceblue; color: blacks;">
